--- a/src/main/resources/assets/the_extractinator/lang/en_us.json
+++ b/src/main/resources/assets/the_extractinator/lang/en_us.json
@@ -17,6 +17,7 @@
   "text.autoconfig.the_extractinator.option.extractinatorConfig.veryRareItemChance":  "Very Rare Item Chance",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.extremelyRareItemChance":  "Extremely Rare Item Chance",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown":  "Input Cooldown",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier":  "Output Loot Multiplier",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe":  "Extractinator Recipe",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks":  "Supported Blocks",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods":  "Supported Mods",
@@ -76,37 +77,44 @@
   "text.autoconfig.the_extractinator.extractinator_recipe.modern_industrialization": "MI",
   "text.autoconfig.the_extractinator.extractinator_recipe.tech_reborn": "Tech Reborn",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[0]": "How long should the tick delay be when a block is placed in an extractinator via a hopper or",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[1]": "item pipe? The default is eight, meaning that the extractinator will consume one block every",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[2]": "eight ticks (same as a hopper). Set this to one if you want the extractinator to extract its",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[3]": "input instantly.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier.@Tooltip[0]": "Multiplies the random amount of loot by this value. For example, if you set",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier.@Tooltip[1]": "this to 2, something like raw iron would drop 10-20 instead of 5-10.",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[0]": "Defines what recipe to use when crafting the extractinator. By default, the extractinator is",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[1]": "uncraftable. You can change it; however, I have set this to no recipe by default in order to",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[2]": "encourage player exploration, i.e. searching for the extractinator in an underground cabin.",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[3]": "If you don't care about exploration, I'd recommend setting this to a modded recipe.",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[4]": "modded recipe.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[0]": "How long should the tick delay be when a block is placed in an",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[1]": "extractinator via a hopper or item pipe? The default is eight, meaning that ",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[2]": "the extractinator will consume one block every eight ticks (same as a ",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[3]": "hopper). Set this to one if you want the extractinator to extract its input",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[4]": "instantly.",
+
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[0]": "Defines what recipe to use when crafting the extractinator. By default, the",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[1]": "extractinator is uncraftable. You can change it; however, I have set this to",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[2]": "no recipe by default in order to encourage player exploration, i.e. ",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[3]": "searching for the extractinator in an underground cabin. If you don't care",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[4]": "about exploration, I'd recommend setting this to a modded recipe.",
 
   "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods.@Tooltip": "What mods should The Extractinator support?",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[0]": "A highly-configurable list of blocks that the extractinator will accept as an input. You",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[1]": "can add or remove blocks, including modded ones, set the loot table, add custom items",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[2]": "for each block with custom rarity and remove certain items from block loot tables.",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[3]": "Look at the default blocks on this list for reference if you plan on adding any more",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[4]": "blocks. I do not recommend modifying or adding things to this list if you are not",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[5]": "a modpack developer.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[0]": "A highly-configurable list of blocks that the extractinator will accept as an",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[1]": "input. You can add or remove blocks, including modded ones, set the loot",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[2]": "table, add custom items for each block with custom rarity and remove",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[3]": "certain items from block loot tables. Look at the default blocks on this list",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[4]": "for reference if you plan on adding any more blocks. I do not recommend",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[5]": "modifying or adding things to this list if you are not a modpack developer.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing.@Tooltip": "This value should never be equal to or lower than the cabin separation value.",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation.@Tooltip": "This value should never be equal to or greater than the cabin spacing value.",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing.@Tooltip[0]": "This value should never be equal to or lower than the cabin separation",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing.@Tooltip[1]": "value.",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation.@Tooltip[0]": "This value should never be equal to or greater than the cabin spacing",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation.@Tooltip[1]": "value.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight.@Tooltip[0]": "The chance of an intact cabin spawning over other cabin variants.",
-  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight.@Tooltip[1]": "There are currently 2 intact cabin variations.",
+  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight.@Tooltip[0]": "The chance of an intact cabin spawning over other cabin variants. There",
+  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight.@Tooltip[1]": "are currently 2 intact cabin variations.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight.@Tooltip[0]": "The chance of a broken cabin spawning over other cabin variants.",
-  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight.@Tooltip[1]": "There are currently 6 intact cabin variations.",
+  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight.@Tooltip[0]": "The chance of a broken cabin spawning over other cabin variants. There",
+  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight.@Tooltip[1]": "are currently 6 intact cabin variations.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[0]": "Should loot from other mods, such as tin ingots, be included in cabin chests?",
-  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[1]": "(Does not affect cabins that have already been generated in your world).",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[0]": "Should loot from other mods, such as tin ingots, be included in cabin",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[1]": "chests? (Does not affect cabins that have already been generated in your",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[2]": "world).",
 
 
   "the_extractinator.rei.extractinator.title": "Extractinator",
@@ -114,5 +122,5 @@
   "the_extractinator.rei.extractinator.info.body": "Extractinators are found in underground cabins. Look for large, wooden structures in caves.",
 
   "the_extractinator.rei.extractinator.drop_range": "Drops: %s-%d",
-  "the_extractinator.rei.extractinator.yield_chance": "%s %% Chance"
+  "the_extractinator.rei.extractinator.yield_chance": "%s%% Chance"
 }
