--- a/src/main/resources/assets/the_extractinator/lang/en_us.json
+++ b/src/main/resources/assets/the_extractinator/lang/en_us.json
@@ -12,16 +12,16 @@
   "text.autoconfig.the_extractinator.category.Extractinator": "Extractinator",
   "text.autoconfig.the_extractinator.category.World": "World",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.commonItemChance":  "Common Item Chance",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.uncommonItemChance":  "Uncommon Item Chance",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.rareItemChance":  "Rare Item Chance",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.veryRareItemChance":  "Very Rare Item Chance",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extremelyRareItemChance":  "Extremely Rare Item Chance",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown":  "Input Cooldown",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier":  "Output Loot Multiplier",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe":  "Extractinator Recipe",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks":  "Supported Blocks",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.modsSupported":  "Supported Mods",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.commonItemChance_v1":  "Common Item Chance",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.uncommonItemChance_v1":  "Uncommon Item Chance",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.rareItemChance_v1":  "Rare Item Chance",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.veryRareItemChance_v1":  "Very Rare Item Chance",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extremelyRareItemChance_v1":  "Extremely Rare Item Chance",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown_v1":  "Input Cooldown",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier_v1":  "Output Loot Multiplier",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe_v1":  "Extractinator Recipe",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1":  "Supported Blocks",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods_v1":  "Supported Mods",
 
   "text.autoconfig.the_extractinator.option.SupportedBlocksConfig":  "Block Support",
   "text.autoconfig.the_extractinator.option.SupportedBlocksConfig.name":  "Block Name",
@@ -43,22 +43,24 @@
   "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods.ae2Support":  "Applied Energistics 2",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods.mythicmetalsSupport":  "Mythic Metals",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.generateSiltOre":  "Generate Silt Ore",
-  "text.autoconfig.the_extractinator.option.worldConfig.siltVeinSize":  "Silt Vein Size",
-  "text.autoconfig.the_extractinator.option.worldConfig.siltVeinsPerChunk":  "Silt Veins Per Chunk",
-  "text.autoconfig.the_extractinator.option.worldConfig.siltMaxSpawnHeight":  "Silt Max Spawn Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.generateSiltOre_v1":  "Generate Silt Ore",
+  "text.autoconfig.the_extractinator.option.worldConfig.siltVeinSize_v1":  "Silt Vein Size",
+  "text.autoconfig.the_extractinator.option.worldConfig.siltVeinsPerChunk_v1":  "Silt Veins Per Chunk",
+  "text.autoconfig.the_extractinator.option.worldConfig.siltMaxSpawnHeight_v1":  "Silt Max Spawn Height",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.generateCabins":  "Generate Cabins",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing":  "Cabin Spacing",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation":  "Cabin Separation",
-  "text.autoconfig.the_extractinator.option.worldConfig.reduceCabinSpawning":  "Reduce Cabin Spawning",
-  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests":  "Spawn Modded Loot in Chests",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinMinHeight":  "Cabin Min Height",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinMaxHeight":  "Cabin Max Height",
-  "text.autoconfig.the_extractinator.option.worldConfig.deepslateCabinMinHeight":  "Deepslate Cabin Min Height",
-  "text.autoconfig.the_extractinator.option.worldConfig.deepslateCabinMaxHeight":  "Deepslate Cabin Max Height",
-  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight":  "Intact Cabin Weight",
-  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight":  "Broken Cabin Weight",
+  "text.autoconfig.the_extractinator.option.worldConfig.generateCabins_v1":  "Generate Cabins",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing_v1":  "Cabin Spacing",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation_v1":  "Cabin Separation",
+  "text.autoconfig.the_extractinator.option.worldConfig.reduceCabinSpawning_v1":  "Reduce Cabin Spawning",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests_v1":  "Spawn Modded Loot in Chests",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinMinHeight_v1":  "Cabin Min Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinMaxHeight_v1":  "Cabin Max Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.deepslateCabinMinHeight_v1":  "Deepslate Cabin Min Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.deepslateCabinMaxHeight_v1":  "Deepslate Cabin Max Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.oceanCabinMinHeight_v1":  "Ocean Cabin Min Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.oceanCabinMaxHeight_v1":  "Ocean Cabin Max Height",
+  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight_v1":  "Intact Cabin Weight",
+  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight_v1":  "Broken Cabin Weight",
 
   "text.autoconfig.the_extractinator.tier.none": "None",
   "text.autoconfig.the_extractinator.tier.tier_1": "Tier 1",
@@ -79,44 +81,44 @@
   "text.autoconfig.the_extractinator.extractinator_recipe.modern_industrialization": "MI",
   "text.autoconfig.the_extractinator.extractinator_recipe.tech_reborn": "Tech Reborn",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier.@Tooltip[0]": "Multiplies the random amount of loot by this value. For example, if you set",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier.@Tooltip[1]": "this to 2, something like raw iron would drop 10-20 instead of 5-10.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier_v1.@Tooltip[0]": "Multiplies the random amount of loot by this value. For example, if you set",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier_v1.@Tooltip[1]": "this to 2, something like raw iron would drop 10-20 instead of 5-10.",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[0]": "How long should the tick delay be when a block is placed in an",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[1]": "extractinator via a hopper or item pipe? The default is eight, meaning that ",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[2]": "the extractinator will consume one block every eight ticks (same as a ",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[3]": "hopper). Set this to one if you want the extractinator to extract its input",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown.@Tooltip[4]": "instantly.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown_v1.@Tooltip[0]": "How long should the tick delay be when a block is placed in an",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown_v1.@Tooltip[1]": "extractinator via a hopper or item pipe? The default is eight, meaning that ",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown_v1.@Tooltip[2]": "the extractinator will consume one block every eight ticks (same as a ",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown_v1.@Tooltip[3]": "hopper). Set this to one if you want the extractinator to extract its input",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown_v1.@Tooltip[4]": "instantly.",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[0]": "Defines what recipe to use when crafting the extractinator. By default, the",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[1]": "extractinator is uncraftable. You can change it; however, I have set this to",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[2]": "no recipe by default in order to encourage player exploration, i.e. ",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[3]": "searching for the extractinator in an underground cabin. If you don't care",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[4]": "about exploration, I'd recommend setting this to a modded recipe.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe_v1.@Tooltip[0]": "Defines what recipe to use when crafting the extractinator. By default, the",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe_v1.@Tooltip[1]": "extractinator is uncraftable. You can change it; however, I have set this to",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe_v1.@Tooltip[2]": "no recipe by default in order to encourage player exploration, i.e. ",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe_v1.@Tooltip[3]": "searching for the extractinator in an underground cabin. If you don't care",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe_v1.@Tooltip[4]": "about exploration, I'd recommend setting this to a modded recipe.",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods.@Tooltip": "What mods should The Extractinator support?",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedMods_v1.@Tooltip": "What mods should The Extractinator support?",
 
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[0]": "A highly-configurable list of blocks that the extractinator will accept as an",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[1]": "input. You can add or remove blocks, including modded ones, set the loot",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[2]": "table, add custom items for each block with custom rarity and remove",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[3]": "certain items from block loot tables. Look at the default blocks on this list",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[4]": "for reference if you plan on adding any more blocks. I do not recommend",
-  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks.@Tooltip[5]": "modifying or adding things to this list if you are not a modpack developer.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1.@Tooltip[0]": "A highly-configurable list of blocks that the extractinator will accept as an",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1.@Tooltip[1]": "input. You can add or remove blocks, including modded ones, set the loot",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1.@Tooltip[2]": "table, add custom items for each block with custom rarity and remove",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1.@Tooltip[3]": "certain items from block loot tables. Look at the default blocks on this list",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1.@Tooltip[4]": "for reference if you plan on adding any more blocks. I do not recommend",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.supportedBlocks_v1.@Tooltip[5]": "modifying or adding things to this list if you are not a modpack developer.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing.@Tooltip[0]": "This value should never be equal to or lower than the cabin separation",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing.@Tooltip[1]": "value.",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation.@Tooltip[0]": "This value should never be equal to or greater than the cabin spacing",
-  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation.@Tooltip[1]": "value.",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing_v1.@Tooltip[0]": "This value should never be equal to or lower than the cabin separation",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSpacing_v1.@Tooltip[1]": "value.",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation_v1.@Tooltip[0]": "This value should never be equal to or greater than the cabin spacing",
+  "text.autoconfig.the_extractinator.option.worldConfig.cabinSeparation_v1.@Tooltip[1]": "value.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight.@Tooltip[0]": "The chance of an intact cabin spawning over other cabin variants. There",
-  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight.@Tooltip[1]": "are currently 2 intact cabin variations.",
+  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight_v1.@Tooltip[0]": "The chance of an intact cabin spawning over other cabin variants. There",
+  "text.autoconfig.the_extractinator.option.worldConfig.intactCabinWeight_v1.@Tooltip[1]": "are currently 2 intact cabin variations.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight.@Tooltip[0]": "The chance of a broken cabin spawning over other cabin variants. There",
-  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight.@Tooltip[1]": "are currently 6 intact cabin variations.",
+  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight_v1.@Tooltip[0]": "The chance of a broken cabin spawning over other cabin variants. There",
+  "text.autoconfig.the_extractinator.option.worldConfig.brokenCabinWeight_v1.@Tooltip[1]": "are currently 6 intact cabin variations.",
 
-  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[0]": "Should loot from other mods, such as tin ingots, be included in cabin",
-  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[1]": "chests? (Does not affect cabins that have already been generated in your",
-  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests.@Tooltip[2]": "world).",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests_v1.@Tooltip[0]": "Should loot from other mods, such as tin ingots, be included in cabin",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests_v1.@Tooltip[1]": "chests? (Does not affect cabins that have already been generated in your",
+  "text.autoconfig.the_extractinator.option.worldConfig.moddedLootInChests_v1.@Tooltip[2]": "world).",
 
 
   "the_extractinator.rei.extractinator.title": "Extractinator",
