--- a/src/main/resources/assets/the_extractinator/lang/en_us.json
+++ b/src/main/resources/assets/the_extractinator/lang/en_us.json
@@ -17,6 +17,7 @@
   "text.autoconfig.the_extractinator.option.extractinatorConfig.inputCooldown": "Input Cooldown",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.outputLootMultiplier": "Output Loot Multiplier",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.enableReiPercent": "Enable REI percent",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.maximumUsages": "Maximum Usages",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe": "Extractinator Recipe",
   "text.autoconfig.the_extractinator.option.SupportedBlocksConfig": "Block Support",
   "text.autoconfig.the_extractinator.option.SupportedBlocksConfig.name": "Block Name",
@@ -65,6 +66,8 @@
   "text.autoconfig.the_extractinator.option.extractinatorConfig.enableReiPercent.@Tooltip[1]": "an REI tooltip. The formula is rarity percent / rarity entries / yield. It's ",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.enableReiPercent.@Tooltip[2]": "disabled by default to not be overwhelming for new players.",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[0]": "Defines what recipe to use when crafting the extractinator.",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.maximumUsages.@Tooltip[0]": "How many blocks the Extractinator can extract until it breaks. Set it to 0",
+  "text.autoconfig.the_extractinator.option.extractinatorConfig.maximumUsages.@Tooltip[1]": "for it to never break.",
   "text.autoconfig.the_extractinator.option.extractinatorConfig.extractinatorRecipe.@Tooltip[1]": "Requires a server restart (exit and rejoin your world).",
   "the_extractinator.rei.extractinator.title": "Extractinator",
   "the_extractinator.rei.extractinator.info.title": "Location",
