--- a/common/src/main/resources/assets/extractinator/lang/en_us.json
+++ b/common/src/main/resources/assets/extractinator/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.extractinator.extractinator": "Extractinator",
   "block.extractinator.silt": "Silt",
-  "block.extractinator.slush": "Slush"
+  "block.extractinator.slush": "Slush",
+  "text.extractinator.drop_chance": "Drop Chance: %s%%"
 }
