--- a/common/src/main/resources/assets/extractinator/lang/en_us.json
+++ b/common/src/main/resources/assets/extractinator/lang/en_us.json
@@ -2,9 +2,12 @@
   "block.extractinator.extractinator": "Extractinator",
   "block.extractinator.silt": "Silt",
   "block.extractinator.slush": "Slush",
+  "emi.category.extractinator.extractinator": "Extractinator",
   "text.extractinator.drop_chance": "Drop Chance: %s%%",
   "text.resourcefulconfig.extractinator.option.extractTicks": "Extract Ticks",
-  "text.resourcefulconfig.extractinator.option.lootMultiplier": "Loot Multiplier",
+  "text.resourcefulconfig.extractinator.option.extractTicks.tooltip": "How long it takes for the extractinator to extract a single block",
   "text.resourcefulconfig.extractinator.option.extractinatorDurability": "Extractinator Durability",
-  "emi.category.extractinator.extractinator": "Extractinator"
+  "text.resourcefulconfig.extractinator.option.extractinatorDurability.tooltip": "Amount of uses before the extractinator breaks",
+  "text.resourcefulconfig.extractinator.option.lootMultiplier": "Loot Multiplier",
+  "text.resourcefulconfig.extractinator.option.lootMultiplier.tooltip": "Multiplies the amount of loot dropped by this value"
 }
