--- a/common/src/main/resources/assets/extractinator/lang/ja_jp.json
+++ b/common/src/main/resources/assets/extractinator/lang/ja_jp.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.extractinator.main": "鉱石抽出機",
   "block.extractinator.extractinator": "鉱石抽出機",
   "block.extractinator.silt": "泥土",
   "block.extractinator.slush": "軟氷",
