--- a/common/src/main/resources/assets/extractinator/lang/en_us.json
+++ b/common/src/main/resources/assets/extractinator/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.extractinator.main": "Extractinator",
   "block.extractinator.extractinator": "Extractinator",
   "block.extractinator.silt": "Silt",
   "block.extractinator.slush": "Slush",
