--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,2 @@
-- Update to 1.19.4
-- added ja_jp translations
-- fixed some recipe-related issues and made the extractinator more efficient
+- 1.20
+- fix #34
