--- a/common/src/main/resources/assets/extractinator/lang/en_us.json
+++ b/common/src/main/resources/assets/extractinator/lang/en_us.json
@@ -12,5 +12,7 @@
   "text.resourcefulconfig.extractinator.option.lootMultiplier": "Loot Multiplier",
   "text.resourcefulconfig.extractinator.option.lootMultiplier.tooltip": "Multiplies the amount of loot dropped by this value",
   "text.resourcefulconfig.extractinator.option.silent": "Silent",
-  "text.resourcefulconfig.extractinator.option.silent.tooltip": "If the extractinator should be silent"
+  "text.resourcefulconfig.extractinator.option.silent.tooltip": "If the extractinator should be silent",
+  "text.resourcefulconfig.extractinator.option.worldgen": "Worldgen",
+  "text.resourcefulconfig.extractinator.option.worldgen.tooltip": "[Fabric Only] Generates Silt and Slush ores"
 }
